--- a/MainApplication/MainApplication.csproj
+++ b/MainApplication/MainApplication.csproj
@@ -134,10 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Database.xml" />
-    <Content Include="Content\CustomContent\ie.css" />
-    <Content Include="Content\CustomContent\reset.css" />
-    <Content Include="Content\CustomContent\slider.css" />
-    <Content Include="Content\CustomContent\style.css" />
+    <Content Include="Content\ie.css" />
     <Content Include="Content\Images\banner.png" />
     <Content Include="Content\Images\bg.jpg" />
     <Content Include="Content\Images\body-bg.jpg" />
@@ -171,6 +168,9 @@
     <Content Include="Content\Images\slide-1.jpg" />
     <Content Include="Content\Images\slide-2.jpg" />
     <Content Include="Content\Images\slide-3.jpg" />
+    <Content Include="Content\reset.css" />
+    <Content Include="Content\slider.css" />
+    <Content Include="Content\style.css" />
     <Content Include="Content\themes\base\jquery-ui.css" />
     <Content Include="Content\themes\base\jquery.ui.accordion.css" />
     <Content Include="Content\themes\base\jquery.ui.all.css" />
@@ -213,17 +213,15 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Scripts\html5.js" />
+    <Content Include="Scripts\jquery-1.7.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <Content Include="Scripts\Custom\html5.js" />
-    <Content Include="Scripts\Custom\jquery-1.7.min.js" />
-    <Content Include="Scripts\Custom\jquery.easing.1.3.js" />
-    <Content Include="Scripts\Custom\tms-0.4.1.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
+    <Content Include="Scripts\jquery.easing.1.3.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
@@ -233,6 +231,7 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\tms-0.4.1.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
