--- a/MainApplication/Web.config
+++ b/MainApplication/Web.config
@@ -18,17 +18,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
-  <!--
-    For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
   <system.web>
     <httpRuntime/>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="false" targetFramework="4.5"/>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880"/>
     </authentication>
