--- a/MainApplication/Web.config
+++ b/MainApplication/Web.config
@@ -20,7 +20,7 @@
   </appSettings>
   <system.web>
     <httpRuntime/>
-    <compilation debug="false" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5"/>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880"/>
     </authentication>
